	  mod_rcmd_create(). Call mod_rcmd_destroy() before thread termination.

	* src/modules/sshcmd.c : Remove ssh_reaper thread and collect ssh
	  process exit status in new "rcmd_destroy" function.

	* src/modules/mqcmd.c, src/modules/k4cmd.c, src/modules/xrcmd.c,
	  src/modules/mcmd.c, src/modules/qcmd.c :
	  Update remaining rcmd modules to reflect changes in 
	  pdsh_rcmd_operations components.

2005-09-30  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/qsnet/qswutil.h : fix compile warning against definition
	  of QSW_RAILMASK_MAX.

2005-09-22  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (_wdog) : Don't sleep for connect_timeout seconds 
	  at beginning of watchdog poll (breaks command timeout). 

	* src/pdsh/dsh.c (_rsh_thread) : Send SIGTERM to commands that have
	  been timed out by watchdog. (for SSH, this allows us to kill
	  the ssh process but not the remote commands)

2005-09-22  Mark Grondona <mgrondona@llnl.gov>

	* doc/pdsh.1.in : Add note in LIMITATIONS about inability for
	  pdsh to guarantee remote commands are terminated after command
	  timeout.

2005-09-21  Mark Grondona <mgrondona@llnl.gov>

	* src/common/dsh.c (_rcp_response) : Print error string recvd from
	  remote RCP server. Remove confusing "Failed to initiate RCP protocol"
	  error message.

	* src/common/dsh.c (_rcp_response) : Remove legacy comments about
	  pcp response codes (we never send a response prefixed with 2) and
	  other small changes to rcp_response.

2005-09-14  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.c : Update to latest hostlist code which
	  allows a suffix on hostlist expressions, e.g. foo[0-10]-bar.

2005-08-26  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/dshgroup.c (_read_groupfile) : module was testing 
	  for backupfile (/etc/dsh/group/%s), after access() call for 
	  default ($HOME/.dsh/group/%s) failed, but was still opening
	  default instead of backupfile. (Joe Ramey <ramey@it.com>)
